syntax = "proto3";

option csharp_namespace = "User.Grpc";

service UserProtoService {
  // --- Авторизация ---
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);

  // --- Получение информации о пользователе ---
  rpc GetUserById (GetUserByIdRequest) returns (UserGrpcDTO);
  rpc GetUserIdByLogin (GetUserIdByLoginRequest) returns (UserGrpcDTO);
}

// --------------------
// Модели и контракты
// --------------------

// --- Register ---
message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string id = 1;
  string username = 2;
  string message = 3;
}
// --- Register ---


// --- Login ---
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}
// --- Login ---


// --- Logout ---
message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}
// --- Logout ---


// --- GetUserById ---
message GetUserByIdRequest {
  string userId = 1;
}

message GetUserByIdResponse {
  UserGrpcDTO user = 1;
}
// --- GetUserById ---

// --- GetUserByLogin ---
message GetUserIdByLoginRequest {
  string login = 1;
}

message GetUserIdByLoginResponse {
  UserGrpcDTO user = 1;
}
// --- GetUserByLogin ---

// --- DTO ---
message UserGrpcDTO {
    string id = 1;
    string name = 2;
}
// --- DTO ---
